# django-girls-tutorial

./: LICENSE  README.md  pyproject.toml
src/: settings.py  urls.py
src/blog/: models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/blog/templates/blog/: base.html  post_detail.html  post_list.html
